Feature Request: [ 1772015 ] Generate java Interface and implementation instead of X_ classes
http://sourceforge.net/tracker/index.php?func=detail&aid=1772015&group_id=176962&atid=879335